# OpenGLProject

./: CMakeLists.txt  README.md  main.cpp
data/debug/: caixa_vex.txt
data/shaders/: default.shader  default_no_texture.shader  simple.shader  simple_with_texture.shader
include/: AppConstants.h  AppStructs.h  Application.h  Camera.h  Controller.h  CustomStructs.h  Debug.h  FileParser.h  GObject.h  GObjectFactory.h  Lamp.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  Window.h
include/control/: Controller.h  FuncModule.h  ManualMov.h
include/control/modules/: CameraMov.h  LampControl.h  LampMov.h  ManualMov.h
src/: Application.cpp  Camera.cpp  Controller.cpp  FileParser.cpp  GObject.cpp  GObjectFactory.cpp  Lamp.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  test.py
src/control/: Controller.cpp  FuncModule.cpp  ManualMov.cpp
src/control/modules/: CameraMov.cpp  LampControl.cpp  LampMov.cpp  ManualMov.cpp
